# weldml-esp32

./: .gitignore  AGENTS.md  CMakeLists.txt  NOTES.md  PROJECT.md.template  README.md  REQUIREMENTS.md  WSL_SETUP.md  idf_component.yml  partitions.csv  sdkconfig.defaults
boards/esp32/: board.h  sdkconfig.defaults
boards/esp32-c3/: board.h  sdkconfig.defaults
boards/esp32-c6/: board.h  sdkconfig.defaults
boards/esp32-h2/: board.h  sdkconfig.defaults
boards/esp32-s3/: board.h  sdkconfig.defaults
boards/waveshare-esp32-s3-lcd-147/: board.h  partitions.csv  sdkconfig.defaults
components/app_mqtt/: CMakeLists.txt  mqtt.c  mqtt.h
components/ble_provision/: CMakeLists.txt  ble_provision.c  ble_provision.h
components/lcd_st7789/: CMakeLists.txt  lcd_st7789.c  lcd_st7789.h
components/ota/: CMakeLists.txt  ota.c  ota.h
components/usb_msc_sd/: CMakeLists.txt  idf_component.yml  usb_msc_sd.c  usb_msc_sd.h
components/webserver/: CMakeLists.txt  webserver.c  webserver.h
components/weld_parser/: CMakeLists.txt  weld_parser.c  weld_parser.h
components/weld_processor/: CMakeLists.txt  weld_processor.c  (+1 more)
components/zigbee/: CMakeLists.txt  zigbee.c  zigbee.h
docs/: CODING_GUIDELINES.md  CONTEXT_POLICY.md  DEBUG_WORKBENCH_CONTEXT.md  MODEL_ROUTING.md  MVP_REQUIREMENTS.md  OPEN_QUESTIONS.md  PRIOR_WORK_CONTEXT.md  PROJECT_STATUS.md  README.md  esp32-S3-LCD-1.47_wiki_URL.txt
main/: CMakeLists.txt  Kconfig.projbuild  main.c
test_host/: .gitignore  Makefile  test_weld_parser.c
web/: app.js  config.html  index.html  ota.html  status.html  style.css
(+45 files in other folders)
